# kundli

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: kundli.hpp
src/: kundli.cpp  pandit.cpp
